docs: record the test-suite, headless, Ripley and README changes under 0.9.7
These landed after the 0.9.7 entry was written and 0.9.7 is not tagged yet, so
they belong in that section rather than an unreleased one.